<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoeDetails"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".view.shoeDetails.ShoeDetailsAddFragment">

        <TextView
            android:id="@+id/lblTitle"
            android:text="@string/label_title_add_shoe_details"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblTitle"
            android:padding="10dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="36dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/lblName"
                    android:text="Name"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:id="@+id/edtModel"
                    android:text="@={shoeDetails.name}"
                    android:hint="@string/hint_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lblName"
                    />

                <TextView
                    android:id="@+id/lblSize"
                    android:text="Size"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtModel"
                    android:layout_marginTop="4dp"/>

                <EditText
                    android:id="@+id/edtSize"
                    android:text="@={`` + shoeDetails.size}"
                    android:hint="@string/hint_size"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lblSize"
                    />

                <TextView
                    android:id="@+id/lblCompany"
                    android:text="Company"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtSize"
                    android:layout_marginTop="4dp"/>

                <EditText
                    android:id="@+id/edtCompany"
                    android:text="@={shoeDetails.company}"
                    android:hint="@string/hint_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lblCompany"
                    />

                <TextView
                    android:id="@+id/lblDescription"
                    android:text="Description"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtCompany"
                    android:layout_marginTop="4dp"/>

                <EditText
                    android:id="@+id/edtDescription"
                    android:text="@={shoeDetails.description}"
                    android:hint="@string/hint_description_shoe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lblDescription"
                    />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnSave"
            android:text="@string/btn_save_shoe_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp"
            />

        <Button
            android:id="@+id/btnCancel"
            android:text="@string/btn_cancel_shoe_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp"/>

    </LinearLayout>
</layout>