<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.view.login.LoginFragment"
        android:label="@string/title_fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpTo="@id/my_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.view.welcome.WelcomeFragment"
        android:label="Welcome {userName}"
        tools:layout="@layout/fragment_shoe_details">
        <argument
            android:name="userName"
            app:argType="string" />
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:popUpTo="@id/my_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.view.instruction.InstructionsFragment"
        android:label="@string/title_fragment_instructions"
        tools:layout="@layout/fragment_shoe_details">
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:popUpTo="@id/my_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.view.shoeList.ShoeListFragment"
        android:label="@string/title_fragment_shoe_list"
        tools:layout="@layout/fragment_shoe_list" >
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailsAddFragment"
            app:destination="@id/shoeDetailsAddFragment" />
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailsEditFragment"
            app:destination="@id/shoeDetailsEditFragment" />
        <action
            android:id="@+id/action_shoeListFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailsAddFragment"
        android:name="com.udacity.shoestore.view.shoeDetails.ShoeDetailsAddFragment"
        android:label="@string/title_fragment_shoe_details"
        tools:layout="@layout/fragment_shoe_details"/>
    <fragment
        android:id="@+id/shoeDetailsEditFragment"
        android:name="com.udacity.shoestore.view.shoeDetails.ShoeDetailsEditFragment"
        android:label="@string/title_fragment_shoe_details"
        tools:layout="@layout/fragment_shoe_details" >
        <argument
            android:name="positionId"
            app:argType="integer" />
    </fragment>
</navigation>